language/move-lang/tests/move_check/liveness/dead_refs_simple_invalid.move
module 0x8675309::M {
    fun t0() {
        let x = 0;
        let x_ref = &mut x;
        _ = x;
        _ = move x;
        *x_ref = 0;
    }

    fun t1() {
        let x = 0;
        let x_ref = &mut x;
        _ = x;
        _ = move x;
        _ = *x_ref;
    }

}
